# litter

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md
.github/workflows/: android-apk-release.yml  android-play-release.yml  android.yml  ios-app-store-release.yml  ios-testflight.yml  ios.yml  mobile-ci.yml  mobile-release.yml  rust-bridge.yml
apps/android/: README.md
apps/android/app/: build.gradle.kts
apps/android/core/bridge/: build.gradle.kts
apps/android/docs/: qa-matrix.md
apps/android/scripts/: bump-version.sh  play-upload.sh
apps/ios/: project.yml
apps/ios/Litter.xcodeproj/: project.pbxproj
apps/ios/Sources/Litter/: Extensions.swift  Info.plist  Litter.entitlements  LitterApp.swift
apps/ios/Sources/LitterLiveActivity/: CodexTurnLiveActivity.swift  CodexVoiceCallLiveActivity.swift  Info.plist  LitterLiveActivity.entitlements  LitterLiveActivityBundle.swift  VoiceCallLockScreenCardView.swift
apps/ios/Tests/CodexIOSTests/: ConversationPlanSemanticsTests.swift  HomeDashboardSupportTests.swift  NetworkDiscoveryTests.swift  PerformanceHelpersTests.swift  ThreadOpenHydrationTests.swift  ToolCallMessageParserTests.swift
apps/ios/Tests/LitterTests/: ConversationAttachmentSupportTests.swift  RealtimeConversationProtocolTests.swift
apps/ios/scripts/: app-store-release.sh  build-rust.sh  sync-codex.sh  testflight-upload.sh
docs/releases/: ios-testflight-checklist.md
patches/codex/: client-controlled-handoff.patch  ios-exec-hook.patch  mobile-code-mode-stub.patch  thread-read-permissions.patch
services/push-proxy/: package-lock.json  package.json  wrangler.toml
services/push-proxy/src/: apns.ts
services/website/public/: index.html  privacy.html  support.html  terms.html
shared/rust-bridge/: Cargo.toml  generate-bindings.sh
shared/rust-bridge/codegen/src/: main.rs
shared/rust-bridge/codex-bridge/: Cargo.toml
shared/rust-bridge/codex-bridge/include/: codex_bridge.h
shared/rust-bridge/codex-bridge/src/: android_jni.rs  lib.rs  voice_handoff.rs
shared/rust-bridge/codex-ipc/src/: conversation_state.rs  lib.rs  wire_trace.rs
shared/rust-bridge/codex-ipc/src/client/: connection.rs
shared/rust-bridge/codex-mobile-client/: Cargo.toml
shared/rust-bridge/codex-mobile-client/src/: aec.rs  conversation.rs  conversation_uniffi.rs  discovery.rs  discovery_uniffi.rs  hydration.rs  immer_patch.rs  lib.rs  mobile_client_impl.rs  parser.rs  ssh.rs  uniffi_shared.rs
shared/rust-bridge/codex-mobile-client/src/ffi/: app_store.rs  client.rs  discovery.rs  errors.rs  logs.rs  mod.rs  parser.rs  shared.rs  ssh.rs  uniffi_exports.rs
shared/rust-bridge/codex-mobile-client/src/logging/: mod.rs
shared/rust-bridge/codex-mobile-client/src/rpc/: mod.rs
shared/rust-bridge/codex-mobile-client/src/session/: connection.rs  events.rs  mod.rs  threads.rs  voice_handoff.rs
shared/rust-bridge/codex-mobile-client/src/store/: actions.rs  boundary.rs  mod.rs  reconcile.rs  reducer.rs  snapshot.rs  updates.rs  voice.rs
shared/rust-bridge/codex-mobile-client/src/transport/: adapter.rs
shared/rust-bridge/codex-mobile-client/src/types/: enums.rs  mod.rs  models.rs  server_requests.rs  voice.rs
shared/rust-bridge/codex-tui/src/: app.rs  export_fixture.rs  main.rs  markdown.rs  router.rs
shared/rust-bridge/codex-tui/src/screens/: conversation.rs  discovery.rs  home.rs  sessions.rs  settings.rs
shared/rust-bridge/codex-tui/src/widgets/: approval_bar.rs  message_item.rs  phone_frame.rs  status_bar.rs  user_input_bar.rs
shared/rust-bridge/mobile-log-collector/src/: main.rs  renderjson.js  tail_ui.html
tools/scripts/: build-android-rust.sh
(+152 files in other folders)
